objects/ssot__CarePlanDetail__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CarePlanId__c</fullName>
        <label>Care Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailCodeId__c</fullName>
        <label>Detail Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailCodeObject__c</fullName>
        <label>Detail Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailRecordId__c</fullName>
        <label>Detail Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailRecordObject__c</fullName>
        <label>Detail Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailType__c</fullName>
        <label>Detail Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Plan Detail Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriorityType__c</fullName>
        <label>Priority Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1734838328158_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlanDetail_DetailCodeId_map_Code_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CarePlanDetail_DetailCodeId_map_Code_rel</relationshipLabel>
        <relationshipName>rel_1734838328158_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1734838329279_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlanDetail_DetailRecordId_map_Ca_rel</label>
        <referenceTo>ssot__CarePlan__dlm</referenceTo>
        <relationshipLabel>CarePlanDetail_DetailRecordId_map_Ca_rel</relationshipLabel>
        <relationshipName>rel_1734838329279_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1734838331984_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlanDetail_DetailRecordId_map_Ac_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CarePlanDetail_DetailRecordId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1734838331984_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>